--- a/gb/23/2/2/n13920482.md
+++ b/gb/23/2/2/n13920482.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>神韵圣塞瓦斯蒂安热演 观众喜获传统文化启迪</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>神韵圣塞瓦斯蒂安热演 观众获传统文化启迪</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/02/id13920580-2302011819032124-600x400.jpg" />
 <h6>2023年2月1日，美国神韵环球艺术团在西班牙圣塞瓦斯蒂安库尔素礼堂上演了第二场演出。图为演出前，观众在剧院大厅。（张清飖／大纪元）
 </h6>
 <hr>
 	<p>【大纪元2023年02月02日讯】（大纪元西班牙塞瓦斯蒂安记者站报导）2023年2月1日，美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%9C%A3%E5%A1%9E%E7%93%A6%E6%96%AF%E8%92%82%E5%AE%89%E5%BA%93%E5%B0%94%E7%B4%A0%E7%A4%BC%E5%A0%82.md#1">西班牙圣塞瓦斯蒂安库尔素礼堂</a>（Auditorio Kursaal）上演了本年度在当地的第二场演出，各行业的主流精英慕名而来。</p>
-<p>一声庄严锣响，开启辉宏的音乐篇章。随着大幕缓缓拉开，万道金光奔涌而出，观众沐浴其中，跟随<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>遨游上下五千年，从天国胜景到人间万象，领略华夏神传文化的美好造化。</p>
+<p>一声庄严锣响，开启恢宏的音乐篇章。随着大幕缓缓拉开，万道金光奔涌而出，观众沐浴其中，跟随<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>遨游上下五千年，从天国胜景到人间万象，领略华夏神传文化的美好造化。</p>
 <h2>神韵触及人心灵 诊所老板赞佩<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a></h2>
-<figure id="attachment_13920583" aria-describedby="caption-attachment-13920583" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13920583-2302011753532124.jpg"><img class="size-large wp-image-13920583" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13920583-2302011753532124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13920583" class="wp-caption-text">2023年2月1日，西班牙诊所老板Joaquin Segura和太太Ionasia Panasie带着女儿一起在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%9C%A3%E5%A1%9E%E7%93%A6%E6%96%AF%E8%92%82%E5%AE%89%E5%BA%93%E5%B0%94%E7%B4%A0%E7%A4%BC%E5%A0%82.md#1">西班牙圣塞瓦斯蒂安库尔素礼堂</a>观看了美国神韵环球艺术团今年在当地的第二场演出。（王亦笑／大纪元）</figcaption></figure>
-<p>“所有的编舞和现场音乐都是宏伟作品，还有（演员们）的同步性，演出的表现力都值得称道。”诊所老板Joaquin Segura看完演出后表示，“这真是非常优美且富有感情的演出，触及人的心灵，让人心情愉悦。”</p>
+<figure id="attachment_13920583" aria-describedby="caption-attachment-13920583" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13920583-2302011753532124.jpg"><img class="size-large wp-image-13920583" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13920583-2302011753532124-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13920583" class="wp-caption-text">2023年2月1日，西班牙诊所老板Joaquin Segura和太太Ionasia Panasie带着女儿一起，在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%A5%BF%E7%8F%AD%E7%89%99%E5%9C%A3%E5%A1%9E%E7%93%A6%E6%96%AF%E8%92%82%E5%AE%89%E5%BA%93%E5%B0%94%E7%B4%A0%E7%A4%BC%E5%A0%82.md#1">西班牙圣塞瓦斯蒂安库尔素礼堂</a>观看了美国神韵环球艺术团今年在当地的第二场演出。（王亦笑／大纪元）</figcaption></figure>
+<p>“所有的编舞和现场音乐都是宏伟作品，还有（演员们）的同步性，演出的表现力都值得称道。”诊所老板、医生Joaquin Segura看完演出后表示，“这真是非常优美且富有感情的演出，触及人的心灵，让人心情愉悦。”</p>
 <p>当晚，他和太太Ionasia Panasie带着女儿一起来观看神韵。他们都非常喜欢，演出结束后还在剧院大厅里的神韵宣传画前不断拍照，希望多留下一些美好的回忆。</p>
 <p>Segura直言，“我认为，任何一个有感知的人都会喜欢这场演出。”</p>
 <p>他举例说，“我非常喜欢二胡的演奏，那个中国乐器，用两根弦可以发出如此多的触及心灵的声音。”他描述道，“听的时候感到很深沉，能够让人沉浸其中，很深邃，非常美妙动听。”</p>
@@ -22,18 +22,20 @@
 <p>德音雅乐能够帮助人保持健康，作为一名医生，Segura很认同这一点，他很肯定地表示，“（神韵）是一个色彩、音乐与文化认知的大爆发，她能帮助你保持身体康健。”</p>
 <h2>法国服装设计师：神韵服装充满传统的灵感启发</h2>
 <figure id="attachment_13920585" aria-describedby="caption-attachment-13920585" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13920585-2302011756192124.jpg"><img class="size-large wp-image-13920585" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13920585-2302011756192124-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-13920585" class="wp-caption-text">2023年2月1日晚，服装设计师Joanna Braun于西班牙圣塞瓦斯蒂安库尔素礼堂观看了神韵演出。（安然／大纪元）</figcaption></figure>
-<p>来自法国的服装设计师Joanna Braun观赏神韵演出后表示，神韵服装“充满了灵感启发”，“让人看起来非常愉悦和亲切”。?Braun从事纺织品和场景设计已有十多年，并创有自己品牌。第一次观赏神韵舞蹈演员们展现的中国古典舞，Braun对其神韵和身法体会深刻，“我对舞蹈演员遵循身法的舞蹈方式印象非常深刻，不像芭蕾舞那样用脚尖跳，我觉得这种方式非常尊重人体（的规律），非常有意思。”</p>
+<p>来自法国的服装设计师Joanna Braun观赏神韵演出后表示，神韵服装“充满了灵感启发”，“让人看起来非常愉悦和亲切”。</p>
+<p>Braun从事纺织品和场景设计已有十多年，并创有自己品牌。</p>
+<p>第一次观赏神韵舞蹈演员展现的中国古典舞，Braun对其神韵和身法体会深刻，“我对舞蹈演员遵循身法的舞蹈方式印象非常深刻，不像芭蕾舞那样用脚尖跳，我觉得这种方式非常尊重人体（的规律），非常有意思。”</p>
 <p>她还体会到，“这场演出有一种非常有趣的节奏，由于存在对人体的尊重，控制身法，所以你可以看到他们在舞蹈时很轻松，你可以感觉到那些动作的流畅。”她也“非常喜欢歌曲演出和（现场乐团的）音乐”。</p>
-<p>作为一名服装设计师，Braun赞叹道，“我非常喜欢演出的服装，那些服装非常轻盈柔软，随着舞蹈演员们的动作而飘逸，美极了。”</p>
+<p>作为一名服装设计师，Braun赞叹道，“我非常喜欢演出的服装，那些服装非常轻盈柔软，随着舞蹈演员的动作而飘逸，美极了。”</p>
 <p>她继续说，“我看到了大量色彩的变化，演出服装中使用了大量的颜色变化，我看到演出服装的颜色每年都很不同，我认为这样做非常好，让人惊叹。”</p>
-<p>在Braun看来，演出服装“充满了灵感启发，那是来自传统的灵感”，她认为服装颜色的选择“非常明亮，让人看起来非常愉悦和亲切。”</p>
+<p>在Braun看来，演出服装“充满了灵感启发，那是来自传统的灵感”，她认为服装颜色的选择“非常明亮，让人看起来非常愉悦和亲切”。</p>
 <p>当谈及演出以中华五千年传统价值观为主题，Braun表示十分赞同与人为善的价值观，“这是非常重要的”，对于现代社会来说，“为人善良是最重要的”。</p>
 <p>最后她表示，“演出展现了正确的事情，柔和的舞蹈，表达情感但又保留一些回味空间。”</p>
 <h2>认证教练观神韵 感悟人应铭记与神的联系</h2>
 <figure id="attachment_13920588" aria-describedby="caption-attachment-13920588" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13920588-2302011756252124.jpg"><img class="size-large wp-image-13920588" title="" src="https://i.epochtimes.com/assets/uploads/2023/02/id13920588-2302011756252124-600x401.jpg" alt="" width="600" b="401" /></a><figcaption id="caption-attachment-13920588" class="wp-caption-text">2023年2月1日，Babette Schily女士（右一）与家人在西班牙圣塞瓦斯蒂安市库尔素礼堂剧院观看了神韵环球艺术团的演出。（安然／大纪元）</figcaption></figure>
 <p>“演出令人叹为观止，真的太精彩了。”Babette Schily脱口道出她观看神韵演出的第一感受。Schily是一名得到欧洲辅导和辅导委员会认证的人生教练，从业三十多年了，服务对象包括个人、团体、企业等。</p>
-<p>她表示，演出打动了她的心。“令人惊叹，因为她呈现的都是中国璀璨的传统和历史，所有美好的瞬间。”Schily1989年曾去过西藏，节目中的藏族舞蹈让她想起了这段旅程。“舞台上看到喜马拉雅山的一些风景，让我回忆起那场美好的旅行，很久的事情了。”</p>
-<p>神韵演绎神传文化，这一点深深引起 Schily的共鸣。“我太喜欢了。因为我也打坐冥想，我练瑜珈，我确实感到与神的关联，我觉得（这种关联）这对我个人和所有人都是很重要的。”</p>
+<p>她表示，演出打动了她的心。“令人惊叹，因为她呈现的都是中国璀璨的传统和历史，所有美好的瞬间。”Schily于1989年曾去过西藏，节目中的藏族舞蹈让她想起了这段旅程。“舞台上看到喜马拉雅山的一些风景，让我回忆起那场美好的旅行，很久的事情了。”</p>
+<p>神韵演绎神传文化，这一点深深引起Schily的共鸣。“我太喜欢了。因为我也打坐冥想，我练瑜珈，我确实感到与神的关联，我觉得这对我个人和所有人都是很重要的。”</p>
 <p>观看演出，让她更加明确了人生的意义，“我觉得，让人们记住（与神的联系）真的很重要。我们人是有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md#1">神性</a>的，我们有神性的一面，我们要铭记这份记忆，铭记我们与地球、与上帝的联系。我们也要维护这种联系，维护我们与自然、与所有神圣存在的联系。”</p>
 <p>她表示，在当今这个动荡的时代，更需要神韵这样的演出。“我们现在所需要的是团结，团结一致，整个人类成为一体。”</p>
 <p>责任编辑：周仁</p>
@@ -52,33 +54,33 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180163.md#1" target="_blank">【征文】章阁：中国古代专制吗（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913681.md#1">凡尘中人有仙缘 偶遇修道人出神通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906270.md#1">玄——我亲历的故事（三）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920076.md#1">【全球新闻】美国全面叫停对华为技术出口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920409.md#1">【热点互动】单方释访问消息 普京逼习上沉船？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920282.md#1">【时事金扫描】美使馆发表情包 疑暗讽赵立坚？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919422.md#1">美驻华大使馆推出贴图“鹰小美”引网友联想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918681.md#1">吴人晓：胡鑫宇案为何令人联想到谷开来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919336.md#1">分析：中共陷多事之秋 习近平新班底只能死撑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919533.md#1">40岁胡歌官宣已婚得女 透露妻子非公众人物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918977.md#1">梁朝伟高调进驻抖音 网友喊他千万别做一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918469.md#1">宋仲基官宣结婚 与英籍女友今日登记婚姻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919634.md#1">不怕变“胖冰” 范冰冰过年到京城街头享美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13919017.md#1">终于完成18次抗癌治疗 朱芯仪直呼想哭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916109.md#1">运动前吃什么、何时吃最健康？专家荐9种零食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914714.md#1">护心护肝又护肾 这种天然饮料有神奇功效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918321.md#1">2023年租金预测：温和上涨 工作室需求旺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918579.md#1">你辗转难眠吗？ 试试专家分享的6个助眠方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918809.md#1">增强人体免疫力的9种自然方式</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/2/n13920482.htm">神韵圣塞瓦斯蒂安热演 观众喜获传统文化启迪</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/2/n13920482.htm">神韵圣塞瓦斯蒂安热演 观众获传统文化启迪</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920482.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
